--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/portfolio",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
